--- a/frontend/nginx/default.conf
+++ b/frontend/nginx/default.conf
@@ -2,10 +2,12 @@ server {
     listen       80;
     server_name  localhost;
 
+	add_header 'Access-Control-Allow-Origin' '*';
     #charset koi8-r;
     #access_log  /var/log/nginx/host.access.log  main;
 
     location / {
+	add_header 'Access-Control-Allow-Origin' '*';
         root   /usr/share/nginx/html;
         index  index.html index.htm;
 	try_files $uri /index.html;	
