--- a/lib_catalog/Dockerfile
+++ b/lib_catalog/Dockerfile
@@ -2,7 +2,7 @@ FROM python:3.9.11-alpine3.15
 
 WORKDIR /app
 
-RUN apk add --update --no-cache g++ gcc bash libxml2-dev libxslt-dev postgresql-dev python3-dev musl-dev 
+RUN apk add --update --no-cache bash g++ gcc libxml2-dev libxslt-dev python3-dev postgresql-dev curl
 
 COPY requirements.txt .
 
